@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.419 2005/12/02 20:09:03 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.420 2005/12/02 20:54:52 wolf31o2 Exp $
+
+  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/rc-update.sh:
+  Have rc-update add xdm if livecd/xdm is set.
 
   02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/catalyst_lock.py, modules/catalyst_support.py,
